tests/snapshots/snapshot__fixtures@j02__contract_display.sas.snap
---
source: tests/snapshot.rs
expression: "format!(\"==== LOG ====\\n{}\\n==== LISTING ====\\n{}\\n==== EXIT {} ====\",\noutcome.log, outcome.listing, outcome.exit_code)"
input_file: tests/fixtures/j02/contract_display.sas
---
==== LOG ====

1     data t;
2       x=1.234;
3       output;
4     run;
NOTE: The data set WORK.T has 1 observations and 1 variables.
NOTE: DATA statement used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

5     proc print data=t;
6       format x 8.2;
7       label x='Custom';
8       attrib x label='Display only';
9       var x;
10    run;
WARNING: The FORMAT statement is ignored in PROC PRINT; display customization is not supported.
WARNING: The LABEL statement is ignored in PROC PRINT; display customization is not supported.
WARNING: The ATTRIB statement is ignored in PROC PRINT; display customization is not supported.
NOTE: There were 1 observations read from the data set WORK.T.
NOTE: PROCEDURE PRINT used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

==== LISTING ====
                                         The SAS System

                                          Obs        x

                                            1    1.234

==== EXIT 1 ====
