tests/snapshots/snapshot__fixtures@j02__contract_glm_by.sas.snap
---
source: tests/snapshot.rs
expression: "format!(\"==== LOG ====\\n{}\\n==== LISTING ====\\n{}\\n==== EXIT {} ====\",\noutcome.log, outcome.listing, outcome.exit_code)"
input_file: tests/fixtures/j02/contract_glm_by.sas
---
==== LOG ====

1     data t;
2       input g x y;
3       datalines;
4     1 1 2
5     1 2 4
6     2 1 8
7     2 2 16
8     ;
9     run;
NOTE: The data set WORK.T has 4 observations and 3 variables.
NOTE: DATA statement used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

10    proc glm data=t;
11      model y=x;
12      by g;
13    run;
ERROR: The BY statement is not supported in PROC GLM; it can affect results and cannot be ignored.

==== LISTING ====

==== EXIT 2 ====
