tests/snapshots/snapshot__fixtures@j02__contract_globals.sas.snap
---
source: tests/snapshot.rs
expression: "format!(\"==== LOG ====\\n{}\\n==== LISTING ====\\n{}\\n==== EXIT {} ====\",\noutcome.log, outcome.listing, outcome.exit_code)"
input_file: tests/fixtures/j02/contract_globals.sas
---
==== LOG ====

1     data t;
2       x=1;
3       output;
4     run;
NOTE: The data set WORK.T has 1 observations and 1 variables.
NOTE: DATA statement used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

5     proc print data=t;
6       title 'Inner title';
7       footnote 'Inner foot';
8       options ls=100;
9       libname d 'data';
10      filename f 'input.sas';
11      ods select all;
12      format x 8.2;
13      var x;
14    run;
NOTE: Libref D was successfully assigned as follows:
            Engine:        PARQUET
            Physical Name: data
WARNING: The FORMAT statement is ignored in PROC PRINT; display customization is not supported.
NOTE: There were 1 observations read from the data set WORK.T.
NOTE: PROCEDURE PRINT used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

==== LISTING ====
                                            Inner title

                                              Obs    x

                                                1    1

                                             Inner foot

==== EXIT 1 ====
