tests/snapshots/snapshot__fixtures@j02__contract_logistic_weight.sas.snap
---
source: tests/snapshot.rs
expression: "format!(\"==== LOG ====\\n{}\\n==== LISTING ====\\n{}\\n==== EXIT {} ====\",\noutcome.log, outcome.listing, outcome.exit_code)"
input_file: tests/fixtures/j02/contract_logistic_weight.sas
---
==== LOG ====

1     data t;
2       input x y w;
3       datalines;
4     1 0 1
5     1 1 2
6     2 0 3
7     2 1 4
8     ;
9     run;
NOTE: The data set WORK.T has 4 observations and 3 variables.
NOTE: DATA statement used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

10    proc logistic data=t;
11      model y=x;
12      weight w;
13    run;
ERROR: The WEIGHT statement is not supported in PROC LOGISTIC; it can affect results and cannot be ignored.

==== LISTING ====

==== EXIT 2 ====
