tests/snapshots/snapshot__fixtures@j02__contract_reweight.sas.snap
---
source: tests/snapshot.rs
expression: "format!(\"==== LOG ====\\n{}\\n==== LISTING ====\\n{}\\n==== EXIT {} ====\",\noutcome.log, outcome.listing, outcome.exit_code)"
input_file: tests/fixtures/j02/contract_reweight.sas
---
==== LOG ====

1     data t;
2       x=1; y=2; output;
3       x=2; y=3; output;
4       x=3; y=5; output;
5     run;
NOTE: The data set WORK.T has 3 observations and 2 variables.
NOTE: DATA statement used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

6     proc reg data=t;
7       model y=x;
8       reweight x < 2;
9     run;
ERROR: The REWEIGHT statement is not supported in PROC REG; it can affect results and cannot be ignored.

==== LISTING ====

==== EXIT 2 ====
