tests/snapshots/snapshot__fixtures@j02__contract_unknown.sas.snap
---
source: tests/snapshot.rs
expression: "format!(\"==== LOG ====\\n{}\\n==== LISTING ====\\n{}\\n==== EXIT {} ====\",\noutcome.log, outcome.listing, outcome.exit_code)"
input_file: tests/fixtures/j02/contract_unknown.sas
---
==== LOG ====

1     data t;
2       x=1;
3       output;
4     run;
NOTE: The data set WORK.T has 1 observations and 1 variables.
NOTE: DATA statement used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

5     proc sort data=t out=bad;
6       invented x;
7       by x;
8     run;
ERROR: 180-322: Statement 'INVENTED' is not valid or it is used out of proper order in PROC SORT.

9     proc print data=t;
10    run;
NOTE: There were 1 observations read from the data set WORK.T.
NOTE: PROCEDURE PRINT used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

==== LISTING ====
                                         The SAS System

                                            Obs    x

                                              1    1

==== EXIT 2 ====
