tests/snapshots/snapshot__fixtures@j02__macro_abort_return.sas.snap
---
source: tests/snapshot.rs
expression: "format!(\"==== LOG ====\\n{}\\n==== LISTING ====\\n{}\\n==== EXIT {} ====\",\noutcome.log, outcome.listing, outcome.exit_code)"
input_file: tests/fixtures/j02/macro_abort_return.sas
---
==== LOG ====
ERROR: Execution terminated by the %ABORT RETURN 8 statement.

==== LISTING ====

==== EXIT 8 ====
