tests/snapshots/snapshot__fixtures@j02__macro_errors.sas.snap
---
source: tests/snapshot.rs
expression: "format!(\"==== LOG ====\\n{}\\n==== LISTING ====\\n{}\\n==== EXIT {} ====\",\noutcome.log, outcome.listing, outcome.exit_code)"
input_file: tests/fixtures/j02/macro_errors.sas
---
==== LOG ====
BEFORE
ERROR: Division by zero detected in the %EVAL expression
ERROR: Division by zero detected in the %SYSEVALF expression
ERROR: Function j02_unknown not found or not supported by %SYSFUNC
ERROR: More positional parameters found than defined.
ERROR: The keyword parameter UNKNOWN was not defined with the macro.
ERROR: The %GOTO label MISSING is not defined.
AFTER

==== LISTING ====

==== EXIT 2 ====
