tests/snapshots/snapshot__fixtures@j02__macro_unresolved.sas.snap
---
source: tests/snapshot.rs
expression: "format!(\"==== LOG ====\\n{}\\n==== LISTING ====\\n{}\\n==== EXIT {} ====\",\noutcome.log, outcome.listing, outcome.exit_code)"
input_file: tests/fixtures/j02/macro_unresolved.sas
---
==== LOG ====
WARNING: Apparent symbolic reference MISSING not resolved.
&missing
WARNING: Apparent invocation of macro UNKNOWN not resolved.
%unknown
&protected %protected
[0][0]
NOTE: %SYSEXEC (OS command execution) is not supported in this build; statement ignored
NOTE: %WINDOW (interactive window definition) is not supported in this build; statement ignored
NOTE: %SYSCALL (CALL routine invocation) is not supported in this build; statement ignored

==== LISTING ====

==== EXIT 1 ====
